[package]
name = "brain_frick"
version = "0.1.0"
authors = ["Lukas Sabatschus <luksablp@gmail.com>"]
edition = "2018"

[build]
rustflags = ["-C", "target-cpu=native", "lto=true"]

[profile.release]
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3.3"
termion = "*"
x86 = { version = "0.37.0", features = ["performance-counter"] }
perfcnt = "*"

brainfuck = "*"
